Adding weight entries. Vitest setup
